--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Heroic Features - Start Bootstrap Template</title>
+    <title>The Car Site|Wandaga's Website</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -27,6 +27,19 @@
 </head>
 
 <body>
+<header class="intro-header" style="background-image: url('img/homepic.jpg')">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                    <div class="site-heading">
+                        <h1>The Car Site</h1>
+                        <hr class="small">
+                        <span class="subheading">The Car Site by Haide P. Wandaga</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
 
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -65,10 +78,9 @@
 
         <!-- Jumbotron Header -->
         <header class="jumbotron hero-spacer">
-            <h1>A Warm Welcome!</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, ipsam, eligendi, in quo sunt possimus non incidunt odit vero aliquid similique quaerat nam nobis illo aspernatur vitae fugiat numquam repellat.</p>
-            <p><a class="btn btn-primary btn-large">Call to action!</a>
-            </p>
+            <h3>Welcome to the</h3>
+            <h2><strong>The Car Site</strong></h2>
+            <p>Cars can take us everywhere...</p>
         </header>
 
         <hr>
@@ -145,7 +157,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; Wandaga's Website 2016</p>
                 </div>
             </div>
         </footer>
