--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-<header class="intro-header" style="background-image: url('img/homepic.jpg')">
+<header class="intro-header" style="background-image: url('https://github.com/haidewandaga/ecommerceweb.github.io/blob/master/img/home.jpg?raw=true')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
