--- a/index.html
+++ b/index.html
@@ -62,24 +62,20 @@
 
     <!-- Page Content -->
     <div class="container">
-        <header class="intro-header" style="background-image: url('https://github.com/haidewandaga/ecommerceweb.github.io/blob/master/img/home.jpg?raw=true')">
+        
+        <!-- Jumbotron Header -->
+        <header class="jumbotron hero-spacer" class="intro-header" style="background-image: url('https://github.com/haidewandaga/ecommerceweb.github.io/blob/master/img/home.jpg?raw=true')">
             <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="site-heading">
                         <h1>The Car Site</h1>
                         <hr class="small">
-                        <span class="subheading">The Car Site by Haide P. Wandaga</span>
+                        <span class="subheading">Cars can atke us everywhere...</span>
                     </div>
                 </div>
             </div>
             </div>
-        </header>
-        <!-- Jumbotron Header -->
-        <header class="jumbotron hero-spacer">
-            <h3>Welcome to the</h3>
-            <h2><strong>The Car Site</strong></h2>
-            <p>Cars can take us everywhere...</p>
         </header>
 
         <hr>
