--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="site-heading">
-                        <h1>The Car Site</h1>
+                        <h1 class="letter">The Car Site</h1>
                         <hr class="small">
-                        <span class="subheading">Cars can atke us everywhere...</span>
+                        <span class="letter">Cars can atke us everywhere...</span>
                     </div>
                 </div>
             </div>
