--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <div class="site-heading">
                         <h1 class="letter">The Car Site</h1>
                         <hr class="small">
-                        <span class="letter">Cars can atke us everywhere...</span>
+                        <span style="color: white">Cars can take us everywhere...</span>
                     </div>
                 </div>
             </div>
