--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Start Bootstrap</a>
+                <a class="navbar-brand" href="https://haidewandaga.github.io/ecommerceweb.github.io/">Home</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#">About</a>
+                        <a href="#">About Us</a>
                     </li>
                     <li>
                         <a href="#">Services</a>
                     </li>
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="#">Contact Us</a>
                     </li>
                 </ul>
             </div>
@@ -93,12 +93,14 @@
 
             <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <img src="http://placehold.it/800x500" alt="">
+                    <img src="https://raw.githubusercontent.com/haidewandaga/ecommerceweb.github.io/master/img/1.jpg" alt="">
                     <div class="caption">
-                        <h3>Feature Label</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <h3>KIA PICANTO EX 2014</h3>
+                        <p>This Kia Picanto 2014 with a Automatic transmission is 
+						priced at 425000 and is strategically located at Quezon City. 
+						If you're interested to inquire on the listings just send message on us.</p>
                         <p>
-                            <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
+                            <a href="feature1.html" class="btn btn-primary">Buy Now!</a> <a href="feature1.html" class="btn btn-default">More Info</a>
                         </p>
                     </div>
                 </div>
@@ -106,12 +108,13 @@
 
             <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <img src="http://placehold.it/800x500" alt="">
+                    <img src="https://raw.githubusercontent.com/haidewandaga/ecommerceweb.github.io/master/img/2.jpg" alt="">
                     <div class="caption">
-                        <h3>Feature Label</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <h3>SUZUKI CIAZ 2016</h3>
+                        <p>This new Black Suzuki Ciaz GLX 2016 is a must-have. This vehicle comes with a Automatic transmission as well as other great 
+						features. Priced at ₱938000, this will be snapped up in no time so make sure you get in quick. Don’t forget to mention Carmudi when you contact the seller!</p>
                         <p>
-                            <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
+                            <a href="feature2.html" class="btn btn-primary">Buy Now!</a> <a href="feature2.html" class="btn btn-default">More Info</a>
                         </p>
                     </div>
                 </div>
@@ -119,12 +122,15 @@
 
             <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <img src="http://placehold.it/800x500" alt="">
+                    <img src="https://raw.githubusercontent.com/haidewandaga/ecommerceweb.github.io/master/img/3.jpg" alt="">
                     <div class="caption">
-                        <h3>Feature Label</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <h3>BMW 116I 2012</h3>
+                        <p>2012 BMW 116i 5-Door</p>
+						<p>Automatic Trasmission</p>
+						<p>1.6 Turbo</p>
+						<p>Gasoline Engine</p>
                         <p>
-                            <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
+                            <a href="feature3.html" class="btn btn-primary">Buy Now!</a> <a href="feature3.html" class="btn btn-default">More Info</a>
                         </p>
                     </div>
                 </div>
@@ -132,12 +138,15 @@
 
             <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <img src="http://placehold.it/800x500" alt="">
+                    <img src="https://raw.githubusercontent.com/haidewandaga/ecommerceweb.github.io/master/img/4.jpg" alt="">
                     <div class="caption">
-                        <h3>Feature Label</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <h3>MITSUBISHI MONTERO SPORT 2009</h3>
+                        <p>MONTERO RED  FOR SALE  4X2</p>
+						<p>First owner</p>
+						<p>Fresh in and out</p>
+						<p>Very well maintained</p>
                         <p>
-                            <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
+                            <a href="feature4.html" class="btn btn-primary">Buy Now!</a> <a href="feature4.html" class="btn btn-default">More Info</a>
                         </p>
                     </div>
                 </div>
