--- a/feature1.html
+++ b/feature1.html
@@ -62,21 +62,22 @@
 
     <!-- Page Content -->
     <div class="container">
-        
+	
+	
         <!-- Jumbotron Header -->
-        <header class="jumbotron hero-spacer" class="intro-header" style="background-image: url('https://github.com/haidewandaga/ecommerceweb.github.io/blob/master/img/home.jpg?raw=true')">
+		<header class="jumbotron hero-spacer" class="intro-header" style="background-image: url('https://raw.githubusercontent.com/haidewandaga/ecommerceweb.github.io/master/img/hi.jpg')">
             <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="site-heading">
-                        <h1 style="color: white" >The Car Site</h1>
-                        <hr class="small">
-                        <h3><span style="color: white">Cars can take us everywhere...</span><h3>
+                        <h1 style="color: white" >KIA PICANTO EX 2014</h1>
                     </div>
                 </div>
             </div>
             </div>
         </header>
+        <!-- Jumbotron Header -->
+    
 
         <hr>
 
