--- a/feature1.html
+++ b/feature1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -45,13 +45,13 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#">About Us</a>
+                        <a href="about">About Us</a>
                     </li>
                     <li>
-                        <a href="#">Services</a>
+                        <a href="products.html">product.html</a>
                     </li>
                     <li>
-                        <a href="#">Contact Us</a>
+                        <a href="contact.hmtl">Contact Us</a>
                     </li>
                 </ul>
             </div>
@@ -77,32 +77,29 @@
             </div>
         </header>
         <!-- Jumbotron Header -->
-    
-
         <hr>
-
 
         <!-- Page Features -->
         <div class="row text-center">
-
-            <div class="col-md-8 col-sm-6 hero-feature">    
-                    <img src="https://raw.githubusercontent.com/haidewandaga/ecommerceweb.github.io/master/img/1.jpg" alt="">
-                    <div class="caption">
-                        <h3>KIA PICANTO EX 2014</h3>
-                        <p>This Kia Picanto 2014 with a Automatic transmission is 
-						priced at 425000 and is strategically located at Quezon City. 
-						If you're interested to inquire on the listings just send message on us.</p>
-                        <p>
-                            <a href="feature1.html" class="btn btn-primary">Buy Now!</a> <a href="feature1.html" class="btn btn-default">More Info</a>
-                        </p>
-                    </div>
-
+            <div class="col-md-6">    
+                  <img src="https://raw.githubusercontent.com/haidewandaga/ecommerceweb.github.io/master/img/1.jpg" width="450" height="380">
+	    </div>
+	    <div class="col-sm-6">
+                    <h3>KIA PICANTO EX 2014</h3>
+                    <p>This Kia Picanto 2014 with a Automatic transmission is priced at 425000 and is strategically located at Quezon City. 
+	            If you're interested to inquire on the listings just send message on us.</p>
+<hr>
+		<h4>Details</h4> 	
+		<ul>
+		<li>Color Family ---- White</li>
+		<li>Doors        ---- 5</li>
+		<li>Drive Type   ---- Front wheel drive</li>
+		<li> Edition     ---- EX</li>
+<hr>
+                        
             </div>
-
-
-
-
         </div>
+
         <!-- /.row -->
 
         <hr>
@@ -127,4 +124,4 @@
 
 </body>
 
-</html>
+<
