--- a/feature1.html
+++ b/feature1.html
@@ -108,7 +108,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Wandaga's Website 2016</p>
+                    <p class="foot">Copyright &copy; Wandaga's Website 2016</p>
                 </div>
             </div>
         </footer>
