--- a/feature1.html
+++ b/feature1.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -123,5 +123,4 @@
     <script src="js/bootstrap.min.js"></script>
 
 </body>
-
-<
+</html>
