--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Wandaga's Website 2016</p>
+                    <p align="center">Copyright &copy; Wandaga's Website 2016</p>
                 </div>
             </div>
         </footer>
