--- a/feature1.html
+++ b/feature1.html
@@ -89,12 +89,14 @@
                     <p>This Kia Picanto 2014 with a Automatic transmission is priced at 425000 and is strategically located at Quezon City. 
 	            If you're interested to inquire on the listings just send message on us.</p>
 <hr>
+	<div class="details">
 		<h4>Details</h4> 	
 		<ul>
 		<li>Color Family ---- White</li>
 		<li>Doors        ---- 5</li>
 		<li>Drive Type   ---- Front wheel drive</li>
 		<li> Edition     ---- EX</li>
+		</ul>
 <hr>
                         
             </div>
