--- a/feature1.html
+++ b/feature1.html
@@ -97,6 +97,7 @@
 		<li>Drive Type   ---- Front wheel drive</li>
 		<li> Edition     ---- EX</li>
 		</ul>
+	</div>
 <hr>
                         
             </div>
