--- a/feature1.html
+++ b/feature1.html
@@ -89,7 +89,7 @@
                     <p>This Kia Picanto 2014 with a Automatic transmission is priced at 425000 and is strategically located at Quezon City. 
 	            If you're interested to inquire on the listings just send message on us.</p>
 <hr>
-
+	<div class="col-sm-3">
 		<h4 align="left">Details</h4> 	
 		<ul align="left">
 		<li>Color Family ---- White</li>
@@ -97,7 +97,17 @@
 		<li>Drive Type   ---- Front wheel drive</li>
 		<li> Edition     ---- EX</li>
 		</ul>
-
+	</div>
+	<div class="col-sm-3">
+		<h4 align="left">Interior</h4>
+		<ul align="left">
+		<li>Air conditioning    ---- Yes</li>
+		<li>Cup holders         ---- Yes</li>
+		<li>AM/FM Stereo        ---- Yes</li>
+		<li>CD audio system     ---- Yes</li>
+		<li>iPod/MP3 compatible ---- Yes</li>
+		</ul>
+	</div>
 <hr>
                         
             </div>
