--- a/feature1.html
+++ b/feature1.html
@@ -97,6 +97,14 @@
 		<li>Drive Type   ---- Front wheel drive</li>
 		<li> Edition     ---- EX</li>
 		</ul>
+		<h4 align="left">Equipment</h4>
+		<ul align="left">
+		<li>Alarm system     ---- Yes</li>
+		<li>Power steering   ---- Yes</li>
+		<li>Keyless entry    ---- Yes</li>
+		<li>Power door locks ---- Yes</li>
+		<li>Power windows    ---- Yes</li>
+		</ul>
 	</div>
 	<div class="col-sm-6">
 		<h4 align="left">Interior</h4>
@@ -106,6 +114,12 @@
 		<li>AM/FM Stereo        ---- Yes</li>
 		<li>CD audio system     ---- Yes</li>
 		<li>iPod/MP3 compatible ---- Yes</li>
+		</ul>
+		<h4 align="left">Exterior</h4>
+		<ul align="left">
+		<li>Alloy Wheels   ---- Yes</li>
+		<li>Fog lights     ---- Yes</li>
+		<li>Tinted windows ---- Yes</li>
 		</ul>
 	</div>
 <hr>
