--- a/feature1.html
+++ b/feature1.html
@@ -86,6 +86,7 @@
 	    </div>
 	    <div class="col-sm-6">
                     <h3>KIA PICANTO EX 2014</h3>
+		<h1 style="color:red;"><strong>? 415,000</strong></h1>
                     <p>This Kia Picanto 2014 with a Automatic transmission is priced at 425000 and is strategically located at Quezon City. 
 	            If you're interested to inquire on the listings just send message on us.</p>
 <hr>
