--- a/feature1.html
+++ b/feature1.html
@@ -86,7 +86,7 @@
 	    </div>
 	    <div class="col-sm-6">
                     <h3>KIA PICANTO EX 2014</h3>
-		<h1 style="color:red;"><strong>? 415,000</strong></h1>
+		<h1 style="color:red;"><strong>Php 415,000.00 </strong></h1>
                     <p>This Kia Picanto 2014 with a Automatic transmission is priced at 425000 and is strategically located at Quezon City. 
 	            If you're interested to inquire on the listings just send message on us.</p>
 <hr>
@@ -123,6 +123,9 @@
 		<li>Tinted windows ---- Yes</li>
 		</ul>
 	</div>
+<hr>
+<hr>
+	<h1 align="left"><a href="index.html"><strong> Back to Home</strong></a></h1>
 <hr>
                         
             </div>
