--- a/feature1.html
+++ b/feature1.html
@@ -124,12 +124,17 @@
 		</ul>
 	</div>
 <hr>
+
+        </div><!-- <col-sm-6-->
+        </div>
 <hr>
-	<h1 align="left"><a href="index.html"><strong> Back to Home</strong></a></h1>
+            <div class="row">
+                <div class="col-lg-12">
+                   <h1 align="center"><a href="index.html"><strong> Back to Home</strong></a></h1>
+                </div>
+            </div>
 <hr>
                         
-            </div>
-        </div>
 
         <!-- /.row -->
 
