--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="about">About Us</a>
+                        <a href="about.html">About Us</a>
                     </li>
                     <li>
                         <a href="products.html">product.html</a>
@@ -70,7 +70,7 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="site-heading">
-                        <h1 style="color: white" >KIA PICANTO EX 2014</h1>
+                        <h1 style="color: white" >About Us</h1>
                     </div>
                 </div>
             </div>
@@ -81,52 +81,18 @@
 
         <!-- Page Features -->
         <div class="row text-center">
-            <div class="col-md-6">    
+            <div class="col-md-4">    
                   <img src="https://raw.githubusercontent.com/haidewandaga/ecommerceweb.github.io/master/img/1.jpg" width="450" height="380">
 	    </div>
-	    <div class="col-sm-6">
+	    <div class="col-sm-8">
                     <h3>KIA PICANTO EX 2014</h3>
 		<h1 style="color:red;"><strong>Php 415,000.00 </strong></h1>
-                    <p>This Kia Picanto 2014 with a Automatic transmission is priced at 425000 and is strategically located at Quezon City. 
-	            If you're interested to inquire on the listings just send message on us.</p>
+                    <p>The web developer and creator of this site is haide P. Wandaga. She is a college student at the University of the Cordilleras
+			currently taking Bachelor of Science in Information Technology in her second year.</p>
 <hr>
-	<div class="col-sm-6">
-		<h4 align="left">Details</h4> 	
-		<ul align="left">
-		<li>Color Family ---- White</li>
-		<li>Doors        ---- 5</li>
-		<li>Drive Type   ---- Front wheel drive</li>
-		<li> Edition     ---- EX</li>
-		</ul>
-		<h4 align="left">Equipment</h4>
-		<ul align="left">
-		<li>Alarm system     ---- Yes</li>
-		<li>Power steering   ---- Yes</li>
-		<li>Keyless entry    ---- Yes</li>
-		<li>Power door locks ---- Yes</li>
-		<li>Power windows    ---- Yes</li>
-		</ul>
-	</div>
-	<div class="col-sm-6">
-		<h4 align="left">Interior</h4>
-		<ul align="left">
-		<li>Air conditioning    ---- Yes</li>
-		<li>Cup holders         ---- Yes</li>
-		<li>AM/FM Stereo        ---- Yes</li>
-		<li>CD audio system     ---- Yes</li>
-		<li>iPod/MP3 compatible ---- Yes</li>
-		</ul>
-		<h4 align="left">Exterior</h4>
-		<ul align="left">
-		<li>Alloy Wheels   ---- Yes</li>
-		<li>Fog lights     ---- Yes</li>
-		<li>Tinted windows ---- Yes</li>
-		</ul>
-	</div>
+	
 <hr>
 
-        </div><!-- <col-sm-6-->
-        </div>
 <hr>
             <div class="row">
                 <div class="col-lg-12">
