--- a/products.html
+++ b/products.html
@@ -45,7 +45,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="about">About Us</a>
+                        <a href="about.html">About Us</a>
                     </li>
                     <li>
                         <a href="products.html">product.html</a>
@@ -70,7 +70,7 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="site-heading">
-                        <h1 style="color: white" >KIA PICANTO EX 2014</h1>
+                        <h1 style="color: white" >Products</h1>
                     </div>
                 </div>
             </div>
