--- a/contact.html
+++ b/contact.html
@@ -89,44 +89,48 @@
 		<h1 style="color:red;"><strong>Php 415,000.00 </strong></h1>
                     <p>This Kia Picanto 2014 with a Automatic transmission is priced at 425000 and is strategically located at Quezon City. 
 	            If you're interested to inquire on the listings just send message on us.</p>
-<hr>
-	<div class="col-sm-6">
-		<h4 align="left">Details</h4> 	
-		<ul align="left">
-		<li>Color Family ---- White</li>
-		<li>Doors        ---- 5</li>
-		<li>Drive Type   ---- Front wheel drive</li>
-		<li> Edition     ---- EX</li>
-		</ul>
-		<h4 align="left">Equipment</h4>
-		<ul align="left">
-		<li>Alarm system     ---- Yes</li>
-		<li>Power steering   ---- Yes</li>
-		<li>Keyless entry    ---- Yes</li>
-		<li>Power door locks ---- Yes</li>
-		<li>Power windows    ---- Yes</li>
-		</ul>
-	</div>
-	<div class="col-sm-6">
-		<h4 align="left">Interior</h4>
-		<ul align="left">
-		<li>Air conditioning    ---- Yes</li>
-		<li>Cup holders         ---- Yes</li>
-		<li>AM/FM Stereo        ---- Yes</li>
-		<li>CD audio system     ---- Yes</li>
-		<li>iPod/MP3 compatible ---- Yes</li>
-		</ul>
-		<h4 align="left">Exterior</h4>
-		<ul align="left">
-		<li>Alloy Wheels   ---- Yes</li>
-		<li>Fog lights     ---- Yes</li>
-		<li>Tinted windows ---- Yes</li>
-		</ul>
-	</div>
-<hr>
-
-        </div><!-- <col-sm-6-->
         </div>
+<hr>
+        
+
+        <div class="row">
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center">Contact
+                        <strong>Us</strong>
+                    </h2>
+                    <hr>
+                    <p>Please feel free to ask us for any clarification or question and we will do our very best to comply wiith it. Thank you!</p>
+                    <form role="form">
+                        <div class="row">
+                            <div class="form-group col-lg-4">
+                                <label>Name</label>
+                                <input type="text" class="form-control">
+                            </div>
+                            <div class="form-group col-lg-4">
+                                <label>Email Address</label>
+                                <input type="email" class="form-control">
+                            </div>
+                            <div class="form-group col-lg-4">
+                                <label>Phone Number</label>
+                                <input type="tel" class="form-control">
+                            </div>
+                            <div class="clearfix"></div>
+                            <div class="form-group col-lg-12">
+                                <label>Message</label>
+                                <textarea class="form-control" rows="6"></textarea>
+                            </div>
+                            <div class="form-group col-lg-12">
+                                <input type="hidden" name="save" value="contact">
+                                <button type="submit" class="btn btn-default">Submit</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+        </div>
+
+
+<hr>
 <hr>
             <div class="row">
                 <div class="col-lg-12">
