--- a/contact.html
+++ b/contact.html
@@ -80,27 +80,15 @@
         <hr>
 
         <!-- Page Features -->
-        <div class="row text-center">
-            <div class="col-md-6">    
-                  <img src="https://raw.githubusercontent.com/haidewandaga/ecommerceweb.github.io/master/img/1.jpg" width="450" height="380">
-	    </div>
-	    <div class="col-sm-6">
-                    <h3>KIA PICANTO EX 2014</h3>
-		<h1 style="color:red;"><strong>Php 415,000.00 </strong></h1>
-                    <p>This Kia Picanto 2014 with a Automatic transmission is priced at 425000 and is strategically located at Quezon City. 
-	            If you're interested to inquire on the listings just send message on us.</p>
-        </div>
-<hr>
-        
+<hr>   
 
         <div class="row">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Contact
-                        <strong>Us</strong>
-                    </h2>
+                    <h2 class="intro-text text-center">Contact Us</h2>
                     <hr>
-                    <p>Please feel free to ask us for any clarification or question and we will do our very best to comply wiith it. Thank you!</p>
+			<p>Ask us for ordering any of our products.</p>
+			<p><em>You can also ask for any clarification or question and we will do our very best to comply wiith it. Thank you!</em></p>
                     <form role="form">
                         <div class="row">
                             <div class="form-group col-lg-4">
