--- a/contact.html
+++ b/contact.html
@@ -78,16 +78,13 @@
         </header>
         <!-- Jumbotron Header -->
         <hr>
-
         <!-- Page Features -->
-<hr>   
-
         <div class="row">
                 <div class="col-lg-12">
                     <hr>
                     <h2 class="intro-text text-center">Contact Us</h2>
                     <hr>
-			<p>Ask us for ordering any of our products.</p>
+			<p align="center">Ask us for ordering any of our products.</p>
 			<p><em>You can also ask for any clarification or question and we will do our very best to comply wiith it. Thank you!</em></p>
                     <form role="form">
                         <div class="row">
