--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="site-heading">
-                        <h1 style="color: white" >About Us</h1>
+                        <h1 style="color: white" >About Me</h1>
                     </div>
                 </div>
             </div>
@@ -82,15 +82,18 @@
         <!-- Page Features -->
         <div class="row text-center">
             <div class="col-md-4">    
-                  <img src="https://raw.githubusercontent.com/haidewandaga/ecommerceweb.github.io/master/img/1.jpg" width="450" height="380">
+                  <img src="https://raw.githubusercontent.com/haidewandaga/ecommerceweb.github.io/master/img/prof.jpg">
 	    </div>
 	    <div class="col-sm-8">
-                    <h3>KIA PICANTO EX 2014</h3>
-		<h1 style="color:red;"><strong>Php 415,000.00 </strong></h1>
+                    <h3>Haide P. Wandaga</h3>
                     <p>The web developer and creator of this site is haide P. Wandaga. She is a college student at the University of the Cordilleras
-			currently taking Bachelor of Science in Information Technology in her second year.</p>
-<hr>
-	
+			currently taking Bachelor of Science in Information Technology majoring in Network and Security Track and now in her second year.</p>
+		<p>Haide was originally not fully introduced in computer world during her years in highschool in which it is the
+			time where students is supposed to be aware of it. At first she thinks that pursuing on a field she is 
+			not familiar with would be a great risk to take but because of the great curiosity and wanting to 
+			discover more about the modern world, she still pursue the course she's currently in. And also because 
+			she thinks that having knowledge about computer would be totally a great asset.<//p>
+<hr>	
 <hr>
 
 <hr>
