--- a/about.html
+++ b/about.html
@@ -45,13 +45,13 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="about.html">About Us</a>
+                        <a href="about.html">About</a>
                     </li>
                     <li>
                         <a href="products.html">product.html</a>
                     </li>
                     <li>
-                        <a href="contact.hmtl">Contact Us</a>
+                        <a href="contact.html">Contact Us</a>
                     </li>
                 </ul>
             </div>
@@ -81,10 +81,10 @@
 
         <!-- Page Features -->
         <div class="row text-center">
-            <div class="col-md-4">    
-                  <img src="https://raw.githubusercontent.com/haidewandaga/ecommerceweb.github.io/master/img/prof.jpg">
+            <div class="col-md-5">    
+                  <img src="https://raw.githubusercontent.com/haidewandaga/ecommerceweb.github.io/master/img/prof.jpg" width="549" height="251">
 	    </div>
-	    <div class="col-sm-8">
+	    <div class="col-sm-7">
                     <h3>Haide P. Wandaga</h3>
                     <p>The web developer and creator of this site is haide P. Wandaga. She is a college student at the University of the Cordilleras
 			currently taking Bachelor of Science in Information Technology majoring in Network and Security Track and now in her second year.</p>
@@ -96,7 +96,6 @@
 <hr>	
 <hr>
 
-<hr>
             <div class="row">
                 <div class="col-lg-12">
                    <h1 align="center"><a href="index.html"><strong> Back to Home</strong></a></h1>
