--- a/feature1.html
+++ b/feature1.html
@@ -51,7 +51,7 @@
                         <a href="products.html">product.html</a>
                     </li>
                     <li>
-                        <a href="contact.hmtl">Contact Us</a>
+                        <a href="contact.html">Contact Us</a>
                     </li>
                 </ul>
             </div>
