--- a/about.html
+++ b/about.html
@@ -93,7 +93,9 @@
 			not familiar with would be a great risk to take but because of the great curiosity and wanting to 
 			discover more about the modern world, she still pursue the course she's currently in. And also because 
 			she thinks that having knowledge about computer would be totally a great asset.<//p>
-<hr>	
+	    </div>
+<hr>
+	    <span>.</span>
 <hr>
 
             <div class="row">
