--- a/contact.html
+++ b/contact.html
@@ -128,7 +128,7 @@
                     <h2 class="intro-text text-center">Contact Us</h2>
                     <hr>
 			<p align="center">Ask us for ordering any of our products.</p>
-			<p><em>You can also ask for any clarification or question and we will do our very best to comply wiith it. Thank you!</em></p>
+			<p allign="center"><em>You can also ask for any clarification or question and we will do our very best to comply wiith it. Thank you!</em></p>
                     <form role="form">
                         <div class="row">
                             <div class="form-group col-lg-4">
