--- a/feature1.html
+++ b/feature1.html
@@ -45,7 +45,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="about.html">About Us</a>
+                        <a href="about.html">About</a>
                     </li>
                     <li>
                         <a href="products.html">product.html</a>
