--- a/contact.html
+++ b/contact.html
@@ -81,10 +81,8 @@
         <div class="row">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Contact Us</h2>
-                    <hr>
 			<p align="center">Ask us for ordering any of our products.</p>
-			<p allign="center"><em>You can also ask for any clarification or question and we will do our very best to comply wiith it. Thank you!</em></p>
+			<p align="center"><em>You can also ask for any clarification or question and we will do our very best to comply wiith it. Thank you!</em></p>
                     <form role="form">
                         <div class="row">
                             <div class="form-group col-lg-4">
@@ -106,7 +104,7 @@
                             </div>
                             <div class="form-group col-lg-12">
                                 <input type="hidden" name="save" value="contact">
-                                <button type="submit" class="btn btn-default">Submit</button>
+                                <button type="submit" class="btn btn-default" allign="center">Submit</button>
                             </div>
                         </div>
                     </form>
