--- a/contact.html
+++ b/contact.html
@@ -44,13 +44,13 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="about.html">About Us</a>
+                        <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="products.html">product.html</a>
+                        <a href="products.html">Product</a>
                     </li>
                     <li>
-                        <a href="contact.hmtl">Contact Us</a>
+                        <a href="contact.hmtl">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -86,25 +86,25 @@
                     <form role="form">
                         <div class="row">
                             <div class="form-group col-lg-4">
-                                <label>Name</label>
+				    <label><strong>Name</strong></label>
                                 <input type="text" class="form-control">
                             </div>
                             <div class="form-group col-lg-4">
-                                <label>Email Address</label>
+                                <label><strong>Email Address</strong></label>
                                 <input type="email" class="form-control">
                             </div>
                             <div class="form-group col-lg-4">
-                                <label>Phone Number</label>
+                                <label><strong>Phone Number</strong></label>
                                 <input type="tel" class="form-control">
                             </div>
                             <div class="clearfix"></div>
                             <div class="form-group col-lg-12">
-                                <label>Message</label>
+                                <label><strong>Message</strong></label>
                                 <textarea class="form-control" rows="6"></textarea>
                             </div>
                             <div class="form-group col-lg-12">
                                 <input type="hidden" name="save" value="contact">
-                                <button type="submit" class="btn btn-default" allign="center">Submit</button>
+                                <button type="submit" class="btn btn-default" allign="center"><strong>Submit</strong></button>
                             </div>
                         </div>
                     </form>
