--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="about.html">About Us</a>
-                    </li>
+                        <a href="about.html">About</a>                    
+		    </li>
                     <li>
                         <a href="products.html">Products</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact Us</a>
+                        <a href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
