--- a/feature1.html
+++ b/feature1.html
@@ -48,10 +48,10 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="products.html">product.html</a>
+                        <a href="products.html">Products</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact Us</a>
+                        <a href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
