--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 						priced at 425000 and is strategically located at Quezon City. 
 						If you're interested to inquire on the listings just send message on us.</p>
                         <p>
-                            <a href="feature1.html" class="btn btn-primary">Buy Now!</a> <a href="feature1.html" class="btn btn-default">More Info</a>
+                            <a href="contact.html" class="btn btn-primary">Buy Now!</a> <a href="feature1.html" class="btn btn-default">More Info</a>
                         </p>
                     </div>
                 </div>
@@ -114,7 +114,7 @@
                         <p>This new Black Suzuki Ciaz GLX 2016 is a must-have. This vehicle comes with a Automatic transmission as well as other great 
 						features. Priced at ₱938000, this will be snapped up in no time so make sure you get in quick. Don’t forget to mention Carmudi when you contact the seller!</p>
                         <p>
-                            <a href="feature2.html" class="btn btn-primary">Buy Now!</a> <a href="feature2.html" class="btn btn-default">More Info</a>
+                            <a href="contact.html" class="btn btn-primary">Buy Now!</a> <a href="feature2.html" class="btn btn-default">More Info</a>
                         </p>
                     </div>
                 </div>
@@ -130,7 +130,7 @@
 						<p>1.6 Turbo</p>
 						<p>Gasoline Engine</p>
                         <p>
-                            <a href="feature3.html" class="btn btn-primary">Buy Now!</a> <a href="feature3.html" class="btn btn-default">More Info</a>
+                            <a href="contact.html" class="btn btn-primary">Buy Now!</a> <a href="feature3.html" class="btn btn-default">More Info</a>
                         </p>
                     </div>
                 </div>
@@ -146,7 +146,7 @@
 						<p>Fresh in and out</p>
 						<p>Very well maintained</p>
                         <p>
-                            <a href="feature4.html" class="btn btn-primary">Buy Now!</a> <a href="feature4.html" class="btn btn-default">More Info</a>
+                            <a href="contact.html" class="btn btn-primary">Buy Now!</a> <a href="feature4.html" class="btn btn-default">More Info</a>
                         </p>
                     </div>
                 </div>
