--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
                         <a href="products.html">Product</a>
                     </li>
                     <li>
-                        <a href="contact.hmtl">Contact</a>
+                        <a href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
