--- a/products.html
+++ b/products.html
@@ -48,7 +48,7 @@
                         <a href="about.html">About Us</a>
                     </li>
                     <li>
-                        <a href="products.html">product.html</a>
+                        <a href="products.html">Products</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact Us</a>
