--- a/about.html
+++ b/about.html
@@ -81,10 +81,11 @@
 
         <!-- Page Features -->
         <div class="row text-center">
-            <div class="col-md-5">    
-                  <img src="https://raw.githubusercontent.com/haidewandaga/ecommerceweb.github.io/master/img/prof.jpg" width="449" height="251">
+		<div class="col-sm-2"></div>
+            <div class="col-md-3">    
+                  <img src="https://raw.githubusercontent.com/haidewandaga/ecommerceweb.github.io/master/img/prof.jpg" width="349" height="251">
 	    </div>
-	    <div class="col-sm-7">
+	    <div class="col-sm-5">
                     <h3>Haide P. Wandaga</h3>
                     <p>The web developer and creator of this site is haide P. Wandaga. She is a college student at the University of the Cordilleras
 			currently taking Bachelor of Science in Information Technology majoring in Network and Security Track and now in her second year.</p>
@@ -94,6 +95,7 @@
 			discover more about the modern world, she still pursue the course she's currently in. And also because 
 			she thinks that having knowledge about computer would be totally a great asset.<//p>
 	    </div>
+	    <div class="col-sm-2"></div>
 <hr>
 	    <span>.</span>
 <hr>
